商品購入機能の実装

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -136,9 +136,11 @@
           <%= image_tag item.image, class: "item-img" %>
       
           <%# 商品が売れていればsold outを表示しましょう  もし選択した商品に紐づく購入記録が存在していたら（空ではなかったら）、"sold out"と表示する %>
+          <% if item.purchase_history.present? %>
           <div class='sold-out'>
-            <%#<span>Sold Out!!</span>%%>
+            <span>Sold Out!!</span>
           </div>
+          <% end %>
           <%# //商品が売れていればsold outを表示しましょう %>
 
         </div>
